# paperbot

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/paperbot/: __about__.py  __init__.py  __main__.py  caching.py
src/paperbot/cli/: __init__.py
tests/: __init__.py  test_CacheSession.py
